Services pageFunc 添加了一个方法 用来输入修改个人信息 添加了控制风险评估页面的Controller  添加了 若干风险评估的页面
加入了amcharts的插件
Signed-off-by: lrzlr2020 <lrzlr2014@gmail.com>

--- a/www/index.html
+++ b/www/index.html
@@ -29,15 +29,18 @@
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
+
+
+    <script src="js/amcharts.js"></script>
+    <script src="js/serial.js"></script>
+    <script src="js/light.js"></script>
+
   </head>
  
  <body ng-app="ionicApp">    
              
     <ion-nav-view animation="slide-left-right"></ion-nav-view>
 
-  
-  
-	
 		
 
   </body>
