--- a/www/index.html
+++ b/www/index.html
@@ -29,6 +29,10 @@
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
+
+    <script src="js/amcharts.js"></script>
+    <script src="js/serial.js"></script>
+    <script src="js/light.js"></script>
   </head>
  
  <body ng-app="ionicApp">    
