--- a/www/index.html
+++ b/www/index.html
@@ -36,7 +36,10 @@
   </head>
  
  <body ng-app="ionicApp">    
-             
+    <ion-nav-bar class="bar-positive">
+      <ion-nav-back-button>
+      </ion-nav-back-button>
+    </ion-nav-bar>         
     <ion-nav-view animation="slide-left-right"></ion-nav-view>
 
   
