Signed-off-by: lrzlr2020 <lrzlr2014@gmail.com>

--- a/www/index.html
+++ b/www/index.html
@@ -30,17 +30,21 @@
     <script src="js/controllers.js"></script>
     <script src="js/directives.js"></script>
 
-
     <script src="js/amcharts.js"></script>
     <script src="js/serial.js"></script>
     <script src="js/light.js"></script>
-
   </head>
  
  <body ng-app="ionicApp">    
-             
+    <ion-nav-bar class="bar-positive">
+      <ion-nav-back-button>
+      </ion-nav-back-button>
+    </ion-nav-bar>         
     <ion-nav-view animation="slide-left-right"></ion-nav-view>
 
+  
+  
+	
 		
 
   </body>
