修改风险评估的框架 新增心衰模块 完善上传功能 部分样式 还有一些记不住了
Signed-off-by: lrzlr2020 <lrzlr2014@gmail.com>

--- a/www/index.html
+++ b/www/index.html
@@ -35,6 +35,7 @@
     <script src="js/amcharts.js"></script>
     <script src="js/serial.js"></script>
     <script src="js/light.js"></script>
+    <script src="js/gauge.js"></script>
   </head>
  
  <body ng-app="ionicApp">    
