--- a/www/index.html
+++ b/www/index.html
@@ -26,6 +26,17 @@
     <script src="lib/jquery/qrcode.min.js"></script>
     <script src="lib/angular-qr-master/angular-qr.min.js"></script>
     <!--<script src="lib/angular-qrcode-master/angular-qrcode.js"></script>-->
+
+    <link rel="stylesheet" href="lib/fullcalendar/dist/fullcalendar.css"/>
+    <!-- jquery, moment, and angular have to get included before fullcalendar -->
+    <script src="lib/jquery/jquery.min.js"></script>
+    <script src="lib/moment/min/moment.min.js"></script>
+    <script src="lib/angular/angular.min.js"></script>
+    <script src="lib/angular-ui-calendar/src/calendar.js"></script>
+    <script src="lib/fullcalendar/dist/fullcalendar.min.js"></script>
+    <script src="lib/fullcalendar/dist/gcal.js"></script>
+    <script src='lib/fullcalendar/dist/lang-all.js'></script>
+    
     <script src="js/app.js"></script>
     <script src="js/services.js"></script>
     <script src="js/controllers.js"></script>
